src/css/tab.css
/* TAB */
a,
a:active,
a:focus {
    outline-color: -moz-use-text-color;
    outline-style: none;
    outline-width: 0;
}

a:active,
a:focus {
    outline: expression(hideFocus='true');
}

#wrapper {
    width: 1180px;
}

#tabs-1,
#tabs-2,
#tabs-3 {
    width: calc(100% - 40px);
    position: absolute;
}

#tab {
    width: 100%;
    margin: 0 auto;
}
#tab ul{
    padding: 0;
    margin: 20px 0 0 0;
}
#tab li {
    float: left;
    font-size: 16px;
    font-weight: bold;
    list-style: none;
    width: 210px;
    height: 60px;
    background-size: 210px 50px;
}

#tab li a {
    display: block;
    padding-bottom: 15px;
    margin: 18px 35px 12px 30px;
    text-decoration: none;
    color: #a8b8b2;
    background-size: 30px 30px;
    line-height: 30px;
    padding: 5px 0 0 42px;
}
#tab ul li:nth-child(1){
    /* background: url(../img/wallets-hui.png) left bottom no-repeat;   */
}
#tab ul li:nth-child(2){
    margin-left: -32px;
    /* background: url(../img/SEND-hui.png) left bottom no-repeat; */
}
#tab ul li:nth-child(3){
    margin-left: -32px;
    /* background: #e1e8ec; */
    /* background: url(../img/contact-hui.png) left bottom no-repeat; */
}
#tab ul li:nth-child(1) a{
    background: url(../img/wallets-iconhui.png) left center no-repeat;
}
#tab ul li:nth-child(2) a{
    background: url(../img/SEND-iconbai.png) left center no-repeat;
    margin: 19px 0 0 55px;
}
#tab ul li:nth-child(3) a{
    background: url(../img/contact-icon.png) left center no-repeat;
    margin: 19px 0 0 34px;
}
#tabs_container {
    padding: 20px;
    min-height: 630px;
    overflow: hidden;
    position: relative;
    background: #fff;
}

.transition {
    -webkit-transition: all .3s ease-in-out;
    -moz-transition: all .3s ease-in-out;
    -o-transition: all .3s ease-in-out;
    -ms-transition: all .3s ease-in-out;
    transition: all .3s ease-in-out;

    -webkit-transition-delay: .3s;
    -moz-transition-delay: .3s;
    -o-transition-delay: .3s;
    -ms-transition-delay: .3s;
    transition-delay: .3s;
}

.make_transist {
    -webkit-transition: all .3s ease-in-out;
    -moz-transition: all .3s ease-in-out;
    -o-transition: all .3s ease-in-out;
    -ms-transition: all .3s ease-in-out;
    transition: all .3s ease-in-out;
}

.hidescale {
    -webkit-transform: scale(0.9);
    -moz-transform: scale(0.9);
    -o-transform: scale(0.9);
    -ms-transform: scale(0.9);
    transform: scale(0.9);
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
    filter: alpha(opacity=0);
    filter: alpha(opacity=0);
    opacity: 0;
}

.showscale {
    -webkit-transform: scale(1);
    -moz-transform: scale(1);
    -o-transform: scale(1);
    -ms-transform: scale(1);
    transform: scale(1);
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
    filter: alpha(opacity=100);
    opacity: 1;

    -webkit-transition-delay: .3s;
    -moz-transition-delay: .3s;
    -o-transition-delay: .3s;
    -ms-transition-delay: .3s;
    transition-delay: .3s;
}

.hideleft {
    -webkit-transform: translateX(-100%);
    -moz-transform: translateX(-100%);
    -o-transform: translateX(-100%);
    -ms-transform: translateX(-100%);
    transform: translateX(-100%);
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
    filter: alpha(opacity=0);
    opacity: 0;
}

.showleft {
    -webkit-transform: translateX(0px);
    -moz-transform: translateX(0px);
    -o-transform: translateX(0px);
    -ms-transform: translateX(0px);
    transform: translateX(0px);
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
    filter: alpha(opacity=100);
    opacity: 1;

    -webkit-transition-delay: .3s;
    -moz-transition-delay: .3s;
    -o-transition-delay: .3s;
    -ms-transition-delay: .3s;
    transition-delay: .3s;
}

.hidescaleup {
    -webkit-transform: scale(1.1);
    -moz-transform: scale(1.1);
    -o-transform: scale(1.1);
    -ms-transform: scale(1.1);
    transform: scale(1.1);
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
    filter: alpha(opacity=0);
    opacity: 0;
}

.showscaleup {
    -webkit-transform: scale(1);
    -moz-transform: scale(1);
    -o-transform: scale(1);
    -ms-transform: scale(1);
    transform: scale(1);
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
    filter: alpha(opacity=100);
    opacity: 1;

    -webkit-transition-delay: .3s;
    -moz-transition-delay: .3s;
    -o-transition-delay: .3s;
    -ms-transition-delay: .3s;
    transition-delay: .3s;
}

.hideflip {
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
    filter: alpha(opacity=0);
    opacity: 0;

    -webkit-transform: rotatey(-90deg) scale(1.1);
    -moz-transform: rotatey(-90deg) scale(1.1);
    -o-transform: rotatey(-90deg) scale(1.1);
    -ms-transform: rotatey(-90deg) scale(1.1);
    transform: rotatey(-90deg) scale(1.1);

    -webkit-transform-origin: 50% 50%;
    -moz-transform-origin: 50% 50%;
    -o-transform-origin: 50% 50%;
    -ms-transform-origin: 50% 50%;
    transform-origin: 50% 50%;
}

.showflip {
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
    filter: alpha(opacity=100);
    opacity: 1;

    -webkit-transition-delay: .3s;
    -moz-transition-delay: .3s;
    -o-transition-delay: .3s;
    -ms-transition-delay: .3s;
    transition-delay: .3s;

    -webkit-transform: rotatey(0deg) scale(1);
    -moz-transform: rotatey(0deg) scale(1);
    -o-transform: rotatey(0deg) scale(1);
    -ms-transform: rotatey(0deg) scale(1);
    transform: rotatey(0deg) scale(1);

    -webkit-transform-origin: 50% 50%;
    -moz-transform-origin: 50% 50%;
    -o-transform-origin: 50% 50%;
    -ms-transform-origin: 50% 50%;
    transform-origin: 50% 50%;
}

.tabulous_active {
    color: #2c9ae3 !important;
}
#tab ul li .tabulous_active{
    background-size: 30px 30px;
    line-height: 30px;
    padding: 5px 0 0 40px;
}
#tab ul li:nth-child(1) .tabulous_active{
    background: url(../img/wallet-lan.png) left center no-repeat;
    margin: 13px 35px 12px 30px;
    padding: 8px 0 0 40px;
}
#tab ul li:nth-child(2) .tabulous_active{
    background: url(../img/SEND-lan.png) left center no-repeat;
    margin: 17px 35px 12px 60px;
}
#tab ul li:nth-child(3) .tabulous_active{
    background: url(../img/contact-lan.png) left center no-repeat;
    margin: 17px 35px 12px 34px;
}
#tab ul li.tabli_active{
    height: 60px;
    background-size: 210px 60px;
}
#tab ul li:nth-child(1).tabli_active{
    background: url(../img/wallet-bai.png) left top no-repeat;
}
#tab ul li:nth-child(2).tabli_active{
    margin-left: -40px;
    background: url(../img/SEND-bai.png) left top no-repeat;
    
}
#tab ul li:nth-child(3).tabli_active{
    margin-left: -40px;
    background: url(../img/contact-bai.png) left top no-repeat;
    
}
.tabulousclear {
    display: block;
    clear: both;
}

